--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="/styles.css">
+    <link rel="stylesheet" href="/components/404.html">
     <title>Login</title>
 </head>
 <body>
@@ -28,9 +29,4 @@
         </div>
     </div>
 </body>
-<script>
-    window.addEventListener('error', function() {
-        window.location.href = '/components/404.html'
-    })
-</script>
 </html>
