--- a/index.html
+++ b/index.html
@@ -22,10 +22,9 @@
         <button class="login-button">Login</button>
         <div class="additional-links">
             <a href="reset-password-link">Reset password</a>
-            <div class="login-network">
-                <a href="microsoft-login-link">Login with Microsoft</a>
-                <a href="google-login-link">Login with Google</a>
-            </div>
+            <a href="microsoft-login-link"><img src="/Assets/Login/microsoft.svg" alt="Login with Microsoft" class="icon"></a>
+            <a href="google-login-link"><img src="/Assets/Login/googleIcon.svg" alt="Login with Google" class="icon"></a>
+        </div>        
         </div>
     </div>
 </body>
