att login button.

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <label for="password">Password</label>
             <input type="password" id="password" placeholder="Enter your password">
         </div>
-        <button class="login-button">Login</button>
+        <button class="login-button"><a href="login-link">Login</a></button>
         <div class="additional-links">
             <a href="reset-password-link">Reset password</a>
             <a href="microsoft-login-link"><img src="/Assets/Login/microsoft.svg" alt="Login with Microsoft" class="icon"></a>
