Add LICENSE and image login.

--- a/index.html
+++ b/index.html
@@ -24,8 +24,15 @@
             <a href="reset-password-link">Reset password</a>
             <a href="microsoft-login-link"><img src="/Assets/Login/microsoft.svg" alt="Login with Microsoft" class="icon"></a>
             <a href="google-login-link"><img src="/Assets/Login/googleIcon.svg" alt="Login with Google" class="icon"></a>
-        </div>        
+        </div>
+        <div class="additional-terms">
+            <a href="link-privacy">privacy</a>
+            <a href="link-terms">terms</a>
+        </div>
         </div>
     </div>
 </body>
+<footer>
+    by José Enoque
+</footer>
 </html>
