chore(a+): enforce quality gate, ci, docs, tooling

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
     <title>Enhanced Login</title>
     <style>
         * {
@@ -201,7 +202,7 @@
             transform: translateY(-2px);
         }
 
-        input:focus + .input-wrapper::before {
+        .input-wrapper:focus-within::before {
             left: 100%;
         }
 
@@ -479,12 +480,12 @@
                 <input type="password" id="password" placeholder="Enter your password">
             </div>
         </div>
-        <button class="login-button" onclick="simulateLoading(this)">
-            <a href="#login-link">Login</a>
+        <button class="login-button" type="button" data-target="#login-link" onclick="simulateLoading(this)">
+            <span class="button-label">Login</span>
         </button>
         <div class="additional-links">
             <a href="#reset-password-link">Reset password</a>
-            <a href="#microsoft-login-link">
+            <a href="#microsoft-login-link" aria-label="Login with Microsoft">
                 <svg width="800px" height="800px" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg" class="icon">
                     <rect x="17" y="17" width="10" height="10" fill="#FEBA08"/>
                     <rect x="5" y="17" width="10" height="10" fill="#05A6F0"/>
@@ -492,7 +493,7 @@
                     <rect x="5" y="5" width="10" height="10" fill="#F25325"/>
                 </svg>
             </a>
-            <a href="#google-login-link">
+            <a href="#google-login-link" aria-label="Login with Google">
                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 48 48" width="24px" height="24px" class="icon">
                     <path fill="#FFC107" d="M43.611,20.083H42V20H24v8h11.303c-1.649,4.657-6.08,8-11.303,8c-6.627,0-12-5.373-12-12c0-6.627,5.373-12,12-12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C12.955,4,4,12.955,4,24c0,11.045,8.955,20,20,20c11.045,0,20-8.955,20-20C44,22.659,43.862,21.35,43.611,20.083z"/>
                     <path fill="#FF3D00" d="M6.306,14.691l6.571,4.819C14.655,15.108,18.961,12,24,12c3.059,0,5.842,1.154,7.961,3.039l5.657-5.657C34.046,6.053,29.268,4,24,4C16.318,4,9.656,8.337,6.306,14.691z"/>
@@ -510,12 +511,12 @@
     <footer>
         <span>by José Enoque</span>
         <div class="footer-links">
-            <a href="https://www.linkedin.com/in/enoque-sousa-bb89aa168/" target="_blank" title="LinkedIn">
+            <a href="https://www.linkedin.com/in/enoque-sousa-bb89aa168/" target="_blank" rel="noopener noreferrer" title="LinkedIn" aria-label="LinkedIn">
                 <svg class="footer-icon" viewBox="0 0 24 24">
                     <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433c-1.144 0-2.063-.926-2.063-2.065 0-1.138.92-2.063 2.063-2.063 1.14 0 2.064.925 2.064 2.063 0 1.139-.925 2.065-2.064 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
                 </svg>
             </a>
-            <a href="https://github.com/ESousa97" target="_blank" title="GitHub">
+            <a href="https://github.com/ESousa97" target="_blank" rel="noopener noreferrer" title="GitHub" aria-label="GitHub">
                 <svg class="footer-icon" viewBox="0 0 24 24">
                     <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
                 </svg>
@@ -525,12 +526,22 @@
 
     <script>
         function simulateLoading(button) {
+            const label = button.querySelector('.button-label');
+            const target = button.dataset.target;
+
             button.classList.add('loading');
-            button.textContent = 'Logging in...';
-            
+            if (label) {
+                label.textContent = 'Logging in...';
+            }
+
             setTimeout(() => {
                 button.classList.remove('loading');
-                button.innerHTML = '<a href="#login-link">Login</a>';
+                if (label) {
+                    label.textContent = 'Login';
+                }
+                if (target) {
+                    window.location.hash = target;
+                }
             }, 2000);
         }
 
