--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
         right: 0;
         bottom: 0;
         background-image:
-          radial-gradient(circle at 20% 50%, rgba(120, 119, 198, 0.1) 0%, transparent 50%),
-          radial-gradient(circle at 80% 20%, rgba(255, 255, 255, 0.05) 0%, transparent 50%),
-          radial-gradient(circle at 40% 80%, rgba(74, 144, 226, 0.1) 0%, transparent 50%);
+          radial-gradient(circle at 20% 50%, rgb(120 119 198 / 0.1) 0%, transparent 50%),
+          radial-gradient(circle at 80% 20%, rgb(255 255 255 / 0.05) 0%, transparent 50%),
+          radial-gradient(circle at 40% 80%, rgb(74 144 226 / 0.1) 0%, transparent 50%);
         animation: backgroundShift 20s ease-in-out infinite;
       }
 
@@ -69,7 +69,7 @@
         position: absolute;
         width: 4px;
         height: 4px;
-        background: rgba(255, 255, 255, 0.3);
+        background: rgb(255 255 255 / 0.3);
         border-radius: 50%;
         animation: float 15s infinite linear;
       }
@@ -78,34 +78,42 @@
         left: 10%;
         animation-delay: 0s;
       }
+
       .particle:nth-child(2) {
         left: 20%;
         animation-delay: -3s;
       }
+
       .particle:nth-child(3) {
         left: 30%;
         animation-delay: -6s;
       }
+
       .particle:nth-child(4) {
         left: 40%;
         animation-delay: -9s;
       }
+
       .particle:nth-child(5) {
         left: 50%;
         animation-delay: -12s;
       }
+
       .particle:nth-child(6) {
         left: 60%;
         animation-delay: -2s;
       }
+
       .particle:nth-child(7) {
         left: 70%;
         animation-delay: -5s;
       }
+
       .particle:nth-child(8) {
         left: 80%;
         animation-delay: -8s;
       }
+
       .particle:nth-child(9) {
         left: 90%;
         animation-delay: -11s;
@@ -129,17 +137,17 @@
       }
 
       .login-box {
-        background: rgba(31, 31, 31, 0.95);
+        background: rgb(31 31 31 / 0.95);
         width: 100%;
         max-width: 420px;
         padding: 40px;
         border-radius: 20px;
         backdrop-filter: blur(20px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid rgb(255 255 255 / 0.1);
         box-shadow:
-          0 25px 45px rgba(0, 0, 0, 0.3),
-          0 0 0 1px rgba(255, 255, 255, 0.05),
-          inset 0 1px 0 rgba(255, 255, 255, 0.1);
+          0 25px 45px rgb(0 0 0 / 0.3),
+          0 0 0 1px rgb(255 255 255 / 0.05),
+          inset 0 1px 0 rgb(255 255 255 / 0.1);
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -176,10 +184,11 @@
 
       @keyframes titleGlow {
         0% {
-          text-shadow: 0 0 20px rgba(74, 144, 226, 0.3);
+          text-shadow: 0 0 20px rgb(74 144 226 / 0.3);
         }
+
         100% {
-          text-shadow: 0 0 30px rgba(127, 35, 248, 0.5);
+          text-shadow: 0 0 30px rgb(127 35 248 / 0.5);
         }
       }
 
@@ -209,7 +218,7 @@
         padding: 15px 20px;
         border: none;
         border-radius: 12px;
-        background: rgba(51, 51, 51, 0.8);
+        background: rgb(51 51 51 / 0.8);
         color: #fff;
         font-size: 1em;
         transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
@@ -224,18 +233,18 @@
         left: -100%;
         width: 100%;
         height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(74, 144, 226, 0.1), transparent);
+        background: linear-gradient(90deg, transparent, rgb(74 144 226 / 0.1), transparent);
         transition: left 0.6s ease;
         z-index: 1;
       }
 
       input:focus {
         outline: none;
-        background: rgba(51, 51, 51, 1);
+        background: rgb(51 51 51 / 1);
         box-shadow:
-          0 0 0 2px rgba(74, 144, 226, 0.5),
-          0 8px 25px rgba(74, 144, 226, 0.15),
-          inset 0 1px 0 rgba(255, 255, 255, 0.1);
+          0 0 0 2px rgb(74 144 226 / 0.5),
+          0 8px 25px rgb(74 144 226 / 0.15),
+          inset 0 1px 0 rgb(255 255 255 / 0.1);
         transform: translateY(-2px);
       }
 
@@ -261,7 +270,7 @@
         position: relative;
         overflow: hidden;
         transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
-        box-shadow: 0 8px 25px rgba(74, 144, 226, 0.3);
+        box-shadow: 0 8px 25px rgb(74 144 226 / 0.3);
       }
 
       .login-button::before {
@@ -271,13 +280,13 @@
         left: -100%;
         width: 100%;
         height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.2), transparent);
+        background: linear-gradient(90deg, transparent, rgb(255 255 255 / 0.2), transparent);
         transition: left 0.6s ease;
       }
 
       .login-button:hover {
         transform: translateY(-3px);
-        box-shadow: 0 12px 35px rgba(74, 144, 226, 0.4);
+        box-shadow: 0 12px 35px rgb(74 144 226 / 0.4);
         background: linear-gradient(135deg, #5ba0f2, #4080cd);
       }
 
@@ -328,7 +337,7 @@
         left: 0;
         right: 0;
         bottom: 0;
-        background: rgba(74, 144, 226, 0.1);
+        background: rgb(74 144 226 / 0.1);
         border-radius: 8px;
         opacity: 0;
         transition: opacity 0.3s ease;
@@ -357,14 +366,14 @@
         transition: all 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         border-radius: 6px;
         padding: 4px;
-        background: rgba(255, 255, 255, 0.1);
+        background: rgb(255 255 255 / 0.1);
         backdrop-filter: blur(10px);
       }
 
       .icon:hover {
         transform: scale(1.15) rotate(5deg);
-        background: rgba(74, 144, 226, 0.2);
-        box-shadow: 0 5px 15px rgba(74, 144, 226, 0.3);
+        background: rgb(74 144 226 / 0.2);
+        box-shadow: 0 5px 15px rgb(74 144 226 / 0.3);
       }
 
       footer {
@@ -372,15 +381,15 @@
         bottom: 25px;
         left: 25px;
         font-size: 0.9em;
-        color: rgba(255, 255, 255, 0.8);
+        color: rgb(255 255 255 / 0.8);
         font-family: 'Roboto', Tahoma, Geneva, Verdana, sans-serif;
         font-weight: 300;
         z-index: 10;
         padding: 12px 20px;
-        background: rgba(0, 0, 0, 0.2);
+        background: rgb(0 0 0 / 0.2);
         border-radius: 20px;
         backdrop-filter: blur(10px);
-        border: 1px solid rgba(255, 255, 255, 0.1);
+        border: 1px solid rgb(255 255 255 / 0.1);
         transition: all 0.3s ease;
         display: flex;
         align-items: center;
@@ -388,7 +397,7 @@
       }
 
       footer:hover {
-        background: rgba(0, 0, 0, 0.3);
+        background: rgb(0 0 0 / 0.3);
         transform: translateY(-2px);
       }
 
@@ -399,7 +408,7 @@
       }
 
       .footer-links a {
-        color: rgba(255, 255, 255, 0.8);
+        color: rgb(255 255 255 / 0.8);
         text-decoration: none;
         transition: all 0.3s ease;
         padding: 6px;
@@ -411,7 +420,7 @@
 
       .footer-links a:hover {
         color: #4a90e2;
-        background: rgba(74, 144, 226, 0.1);
+        background: rgb(74 144 226 / 0.1);
         transform: translateY(-1px);
       }
 
@@ -462,13 +471,15 @@
       /* Pulse animation for interactive elements */
       @keyframes pulse {
         0% {
-          box-shadow: 0 0 0 0 rgba(74, 144, 226, 0.7);
+          box-shadow: 0 0 0 0 rgb(74 144 226 / 0.7);
         }
+
         70% {
-          box-shadow: 0 0 0 10px rgba(74, 144, 226, 0);
+          box-shadow: 0 0 0 10px rgb(74 144 226 / 0);
         }
+
         100% {
-          box-shadow: 0 0 0 0 rgba(74, 144, 226, 0);
+          box-shadow: 0 0 0 0 rgb(74 144 226 / 0);
         }
       }
 
@@ -489,7 +500,7 @@
         left: -100%;
         width: 100%;
         height: 100%;
-        background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.3), transparent);
+        background: linear-gradient(90deg, transparent, rgb(255 255 255 / 0.3), transparent);
         animation: loading 1.5s infinite;
       }
 
