--- a/index.html
+++ b/index.html
@@ -33,22 +33,20 @@
       body::before {
         content: '';
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         background-image:
           radial-gradient(circle at 20% 50%, rgb(120 119 198 / 0.1) 0%, transparent 50%),
           radial-gradient(circle at 80% 20%, rgb(255 255 255 / 0.05) 0%, transparent 50%),
           radial-gradient(circle at 40% 80%, rgb(74 144 226 / 0.1) 0%, transparent 50%);
-        animation: backgroundShift 20s ease-in-out infinite;
+        animation: background-shift 20s ease-in-out infinite;
       }
 
-      @keyframes backgroundShift {
+      @keyframes background-shift {
         0%,
         100% {
           transform: rotate(0deg) scale(1);
         }
+
         50% {
           transform: rotate(180deg) scale(1.1);
         }
@@ -124,12 +122,15 @@
           transform: translateY(100vh) rotate(0deg);
           opacity: 0;
         }
+
         10% {
           opacity: 1;
         }
+
         90% {
           opacity: 1;
         }
+
         100% {
           transform: translateY(-10vh) rotate(360deg);
           opacity: 0;
@@ -153,15 +154,16 @@
         align-items: center;
         position: relative;
         z-index: 10;
-        animation: slideInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        animation: slide-in-up 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94);
         transform-style: preserve-3d;
       }
 
-      @keyframes slideInUp {
+      @keyframes slide-in-up {
         0% {
           opacity: 0;
           transform: translate3d(0, 60px, 0) rotateX(30deg);
         }
+
         100% {
           opacity: 1;
           transform: translate3d(0, 0, 0) rotateX(0deg);
@@ -176,13 +178,12 @@
         text-align: center;
         position: relative;
         background: linear-gradient(135deg, #ffffff, #e0e0e0);
-        -webkit-background-clip: text;
-        -webkit-text-fill-color: transparent;
         background-clip: text;
-        animation: titleGlow 2s ease-in-out infinite alternate;
+        -webkit-text-fill-color: transparent;
+        animation: title-glow 2s ease-in-out infinite alternate;
       }
 
-      @keyframes titleGlow {
+      @keyframes title-glow {
         0% {
           text-shadow: 0 0 20px rgb(74 144 226 / 0.3);
         }
@@ -333,10 +334,7 @@
       .additional-terms a::before {
         content: '';
         position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        bottom: 0;
+        inset: 0;
         background: rgb(74 144 226 / 0.1);
         border-radius: 8px;
         opacity: 0;
@@ -427,7 +425,7 @@
       .footer-icon {
         width: 20px;
         height: 20px;
-        fill: currentColor;
+        fill: currentcolor;
       }
 
       /* Responsive Design */
@@ -508,6 +506,7 @@
         0% {
           left: -100%;
         }
+
         100% {
           left: 100%;
         }
