--- a/index.html
+++ b/index.html
@@ -55,10 +55,7 @@
       /* Floating particles */
       .floating-particles {
         position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
+        inset: 0;
         pointer-events: none;
         z-index: 1;
       }
