--- a/index.html
+++ b/index.html
@@ -171,12 +171,11 @@
         margin-bottom: 30px;
         font-size: 2.5em;
         font-weight: 700;
-        color: #ffffff;
+        color: transparent;
         text-align: center;
         position: relative;
         background: linear-gradient(135deg, #ffffff, #e0e0e0);
         background-clip: text;
-        -webkit-text-fill-color: transparent;
         animation: title-glow 2s ease-in-out infinite alternate;
       }
 
